--- a/src/style/global.less
+++ b/src/style/global.less
@@ -1,56 +1,6 @@
-// input foucs 后显示下划线
-.gb_inputBox {
-    position: relative;
-    .gb_inputHr {
-         margin: 0;
-         height: 2px;
-         border: none;
-         background-color: #7e57c2;
-         position: absolute;
-         left: 0;
-         right: 0;
-         margin-top: -1px;
-         transform: scaleX(0);
-         -webkit-transition: -webkit-transform .45s cubic-bezier(.23,1,.32,1);
-         transition: -webkit-transform .45s cubic-bezier(.23,1,.32,1);
-         background-color: #2878ff;
-     }
-     .gb_inputFocus:focus+hr {
-        transform: scaleX(1);
-    }
- }
-
-  /* 按钮 hover效果 */
-   .gb_ripple {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .gb_ripple:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    background-image: radial-gradient(circle, rgb(88, 88, 88) 10%, transparent 10.01%);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    transform: scale(10, 10);
-    opacity: 0;
-    transition: transform .3s, opacity .4s;
-  }
-  
-  .gb_ripple:active:after {
-    transform: scale(0, 0);
-    opacity: .6;
-    transition: 0s;
-  }
-
   // 设置img 为100%显示
   .img-fit-100 {
+    flex-shrink: 0;
     height: 100%;
     width: 100%;
     object-fit: cover;
